<resources>
    <string name="app_name">AppK</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="not_saved">Not saved</string>
    <string name="item_added">Iten added</string>
    <string name="try_again">Try again</string>
    <string name="removed_todo_list">Removed todo list</string>
    <string name="remove_list">Remove list</string>
    <string name="remove_item">Remove item</string>
    <string name="new_list">New list</string>
    <string name="new_item">New item</string>
    <string name="status_todo">Todo</string>
    <string name="status_doing">Doing</string>
    <string name="status_done">Done</string>
    <string name="textview">TextView</string>
</resources>
