<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="250dp"
        android:padding="8dp" >

        <!-- Title -->

        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_todo_item_form_TitleEditText"
            android:maxLines="1"/>

        <!-- Description -->

        <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_todo_item_form_DescriptionEditText" />

        <!-- Status -->

        <TextView
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_todo_item_form_StatusRadioGroup">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_todo"
                android:id="@+id/dialog_todo_item_form_TodoRadioButton"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_doing"
                android:id="@+id/dialog_todo_item_form_DoingRadioButton"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_done"
                android:id="@+id/dialog_todo_item_form_DoneRadioButton"/>

        </RadioGroup>

        <!-- Save / Edit -->

        <Button
            android:text="@string/save"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_todo_item_form_SubmitButton"
            android:layout_gravity="end"  />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>